--- a/styles/tarefas.css
+++ b/styles/tarefas.css
@@ -242,3 +242,8 @@ a {
   0%{ opacity: 0.5;}
   100%{ opacity: 0.8;}
 }
+
+/* Lixeira para deletar tarefas ----------------------------------------------------------- */
+.tarefa img {
+  cursor: pointer;
+}
