Retoques de estilizações

--- a/styles/acesso.css
+++ b/styles/acesso.css
@@ -71,6 +71,13 @@ button {
 .ingressar{
   text-align: center;
 }
+
+#ingresso{
+  color: var(--primary);
+  border: 2px white;
+  text-decoration: dotted;
+}
+
 .left{
   width: 50%;  
   background-color: white;
