--- a/styles/tarefas.css
+++ b/styles/tarefas.css
@@ -32,8 +32,24 @@ a {
   width: 2em;
   border-radius: 50%;
   background-color: white;
-  opacity: .4;
+  opacity: .3;
   margin-left: .7em;
+
+}
+
+#user-image{
+  font-family: Arial, Helvetica, sans-serif;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background: #004D3C;
+  font-size: 1rem;
+  color: rgb(223, 223, 223);
+  text-align: center;
+  line-height: 2rem;
+  margin: 1rem 0;
+  padding: 2px;
+  cursor: pointer;
 }
 
 #closeApp{
@@ -247,3 +263,16 @@ a {
 .tarefa img {
   cursor: pointer;
 }
+
+
+/* Botao de delete */
+
+.btn-delete:hover{
+  transform: scale(1.1);
+  /* animation: mover .5s   alternate; */
+}
+
+/* @keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-5px); }
+} */
