--- a/styles/tarefas.css
+++ b/styles/tarefas.css
@@ -62,7 +62,6 @@ a {
   color: rgb(223, 223, 223);
   text-align: center;
   line-height: 2rem;
-  margin: 1rem 0;
   padding: 2px;
   cursor: pointer;
 }
@@ -348,6 +347,7 @@ a {
 
 .btn-delete:hover{
   transform: scale(1.1);
+  transition: 0.2s;
   /* animation: mover .5s   alternate; */
 }
 
